--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "scripts": {
     "clean": "rimraf _site",
-    "prepare": "npx husky install",
     "preview": "npx vite preview",
     "predev": "run-s clean",
     "dev": "cross-env NODE_ENV=development run-p dev:*",
@@ -78,7 +77,6 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.14",
@@ -97,6 +95,7 @@
   },
   "dependencies": {
     "alpinejs": "^3.0.1",
-    "core-js": "^3.20.2"
+    "core-js": "^3.20.2",
+    "firebase": "^9.12.0"
   }
 }
