--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "autoprefixer": "^10.2.4",
     "browserslist": "^4.16.6",
     "cross-env": "^7.0.3",
+    "eleventy-plugin-svg-sprite": "^1.2.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-compat": "^4.0.0",
@@ -89,6 +90,7 @@
     "stylelint-config-standard": "^28.0.0",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
     "stylelint-order": "^5.0.0",
+    "svg-sprite": "^1.5.0",
     "tailwindcss": "^3.0.1",
     "vite": "^3.1.0",
     "vite-plugin-pwa": "^0.12.0"
